--- a/BusinessPromotions.html
+++ b/BusinessPromotions.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Stylesheets/style.css">
     <title>Business Promotions</title>
 </head>
 <body>
     <h1>Welcome to Business Promotions!</h1>
+    <hr>
+    <a href="Website4Dashboard.html">Go back to Dashboard...</a>
     <p>Content goes here.</p>
 </body>
 </html>
