--- a/Website4Dashboard.html
+++ b/Website4Dashboard.html
@@ -19,11 +19,30 @@
     </nav>
     </div>
     <p>Content goes here.</p>
-    <div class="container">
+    <div>
         <h1>How to apply for a business permit?</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequuntur dolore,
-            cumque ab quo soluta magnam, aspernatur aliquam ipsum natus unde eveniet sapiente 
-            blanditiis recusandae eum laudantium perferendis vero obcaecati.</p>
+        <h2>Step 1: Business Name Registration with the Department of Trade and Industry (DTI)</h2>
+        <p><strong>1.1. </strong>For small-scale and local businesses,
+             owners are required to apply for business 
+             name registration<br> with the DTI and secure 
+             the necessary documents prior to proceeding 
+             to the barangay.</p>
+        <h2>OR</h2>
+        <p><strong>1.2. </strong>For businesses operating within 
+            M Sta. Rosa and Robinsons Mall - Sta. Rosa, both the DTI <br>
+            registration and the lease of contract must be secured and 
+            processed prior to proceeding to the barangay.</p>
+        <h2>Step 2: Application for Business Permit from Barangay Tagapo</h2>
+        <p><strong>2.1.</strong> Walk-in applications for business 
+            permits are accepted. Applicants should proceed to the 
+            information<br> desk for guidance and assistance.</p>
+        <p>Please note that for walk-in applicants, the processing of 
+            document/s is completed on the same day of application.</p>
+        <h2>OR</h2>
+        <p><strong>2.2.</strong> For online applications, applicants must complete the 
+            necessary information through the following link: (insert Google Forms link)</p>
+            <p>After submitting the online application, applicants are advised to visit 
+                the barangay office to claim the necessary document/s.</p>
     </div>
 </body>
 </html>
