--- a/JobOpportunities.html
+++ b/JobOpportunities.html
@@ -7,7 +7,7 @@
     <title>Job Opportunites</title>
 </head>
 <body>
-    <h1>Welcome to the Business Dashboard!</h1>
+    <h1>Welcome to the Job Opportunites!</h1>
     <hr>
     <a href="Website4Dashboard.html">Go back to Dashboard...</a>
     <p>Content goes here.</p>
