Updated Web Banner

--- a/mainDashboard.html
+++ b/mainDashboard.html
@@ -10,15 +10,15 @@
     <body>
         <!--Business Website Banner-->
         <div class="web-banner">
-            <h1>Barangay <span style="color: rgb(203, 26, 26);">Tagapo</span></h1>
-            <h1>Business Page</h1>
+            <h1>Barangay Tagapo</h1>
+            <h1> <span style="color: #eb0000;">Business</span> Page</h1>
             <p>Business in Tagapo: Permits and Job Opportunities</p>
 
-            <p class="contact-button">Contact Us</p>
+            <div class="contact-btn"><p>Contact us</p></div>
         </div>
 
         <!--Job Opportunities Panel-->
-                <div class="main-container">
+        <div class="main-container">
             <div>
                 <!--Job Container 1-->
                 <div class="job-container">
@@ -75,5 +75,6 @@
                 </iframe>
             </div>
         </div>
+
     </body>
 </html>
