--- a/mainDashboard.html
+++ b/mainDashboard.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
         <link rel="stylesheet" href="mainDashboardStyle.css" />
+        <link rel="stylesheet" href="websiteBanner.css" />
+        <link rel="stylesheet" href="businessPermitSteps.css" />
+        <link rel="stylesheet" href="businessPermitTable.css" />
+        <link rel="stylesheet" href="jobOpportunities.css" />
     </head>
 
     <body>
@@ -14,7 +18,38 @@
             <h1> <span style="color: #eb0000;">Business</span> Page</h1>
             <p>Business in Tagapo: Permits and Job Opportunities</p>
 
-            <div class="contact-btn"><p>Contact us</p></div>
+            <div class="contact-btn"><p>Contact Us ></p></div>
+        </div>
+
+        <!--Business Permit Steps Panel-->
+        <div class="business-permit-steps">
+            <h2>Need a Business Permit?</h2>
+
+            <div class="steps">
+                <h3>Requirements</h3>
+
+                <p>Small/Local Businesses: Secure DTI registration before going to the barangay.</p>
+                <h4>OR</h4>
+                <p>For Businesses in Malls: Secure both DTI registration and lease contract before going to the barangay.</p>
+            </div>
+
+            <div class="steps">
+                <h3>Business Permit Application</h3>
+
+                <p>Walk-in: Proceed to the information desk for assistance. You are required to fill up a form for the processing of your Business Permit.</p>
+                <h4>OR</h4>
+                <p>Online: Click the button below for online application.</p>
+            </div>
+
+            <div class="steps">
+                <h3>Claim Business Permit</h3>
+
+                <p>Walk-in: After filling up necessary information, processing and claiming of documents are done the same day.</p>
+
+                <h4>OR</h4>
+
+                <p>Online: Visit the barangay office to claim your documents.</p>
+            </div>
         </div>
 
         <!--Job Opportunities Panel-->
