--- a/mainDashboard.html
+++ b/mainDashboard.html
@@ -26,37 +26,31 @@
             <h2>Need a Business Permit?</h2>
 
             <div class="steps-wrapper">
-                <div class="step-container">
-                    <div class="steps">
-                        <h3>Requirements</h3>
 
-                        <p><b>Small/Local Businesses:</b> Secure DTI registration before going to the barangay.</p>
-                        <h4>OR</h4>
-                        <p><b>For Businesses in Malls:</b> Secure both DTI registration and lease contract before going to the barangay.</p>
-                    </div>
+                <div class="steps">
+                    <h3>Requirements</h3>
+
+                    <p><b>Small/Local Businesses:</b> Secure DTI registration before going to the barangay.</p>
+                    <p><b>Businesses in Malls:</b> Secure both DTI registration and lease contract before going to the barangay.</p>
                 </div>
 
-                <div class="step-container">
-                    <div class="steps">
-                        <h3>Business Permit Application</h3>
+                <div class="steps">
+                    <h3>Business Permit Application</h3>
 
-                        <p><b>Walk-in:</b> Proceed to the information desk for assistance...</p>
-                        <h4>OR</h4>
-                        <p><b>Online:</b> Click the button below for online application.</p>
-                    </div>
+                    <p><b>Walk-in:</b> Proceed to the information desk for assistance. You are required to fill up a form for the processing of your Business Permit.</p>
+                    <p><b>Online:</b> Click the button below for online application.</p>
                 </div>
 
-                <div class="step-container">
-                    <div class="steps">
-                        <h3>Claim Business Permit</h3>
+                <div class="steps">
+                    <h3>Claim Business Permit</h3>
 
-                        <p><b>Walk-in:</b> After filling up necessary information...</p>
-                        <h4>OR</h4>
-                        <p><b>Online:</b> Visit the barangay office to claim your documents.</p>
-                    </div>
+                    <p><b>Walk-in:</b> After filling up necessary information, processing and claiming of documents are done the same day.</p>
+                    <p><b>Online:</b> Visit the barangay office to claim your documents..</p>
                 </div>
+
             </div>
         </div>
+
 
         <!--Job Opportunities Panel-->
         <div class="main-container">
