Updated Website Banner and Permit Steps
Added hover effects and lines

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -5,19 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Barangay Tagapo Business Page</title>
         
-        <link rel="stylesheet" href="/Stylesheets/mainDashboardStyle.css" />
-        <link rel="stylesheet" href="/Stylesheets/websiteBanner.css" />
-        <link rel="stylesheet" href="/Stylesheets/businessPermitSteps.css" />
-        <link rel="stylesheet" href="/Stylesheets/businessPermitTable.css" />
-        <link rel="stylesheet" href="/Stylesheets/jobOpportunities.css" />
-        <link rel="stylesheet" href="/Stylesheets/jobDetails.css" />
+        <link rel="stylesheet" href="/Stylesheets/businessDashboardStyle.css" />
+        <link rel="stylesheet" href="/Stylesheets/websiteBannerStyle.css" />
+        <link rel="stylesheet" href="/Stylesheets/businessPermitStepsStyle.css" />
+        <link rel="stylesheet" href="/Stylesheets/businessPermitTableStyle.css" />
+        <link rel="stylesheet" href="/Stylesheets/jobOpportunitiesStyle.css" />
+        <link rel="stylesheet" href="/Stylesheets/jobDetailsStyle.css" />
     </head>
 
     <body>
         <!--Business Website Banner-->
         <div class="web-banner">
             <h1>Barangay Tagapo</h1>
-            <h1> <span style="color: #eb0000;">Business</span> Page</h1>
+            <h1> <span class="red-highlight">Business</span> Page</h1>
             <p>Business in Tagapo: Permits and Job Opportunities</p>
 
             <div class="contact-btn"><p>Contact Us</p></div>
@@ -47,12 +47,20 @@
                     <h3>Claim Business Permit</h3>
 
                     <p><b>Walk-in:</b> After filling up necessary information, processing and claiming of documents are done the same day.</p>
-                    <p><b>Online:</b> Visit the barangay office to claim your documents..</p>
+                    <p><b>Online:</b> Visit the barangay office to claim your documents.</p>
                 </div>
 
             </div>
+
+            <span class="permit-note"><p><i>You can check the tables below for the prices of permits.</i></p></span>
+
+            <div class="apply-btn">
+                <a href="#">Apply Now</a>
+            </div>
         </div>
 
+        <!--Business Permit Table Panel-->
+        <!--Insert Code Here-->
 
         <!--Job Opportunities Panel-->
         <div class="jobs-section">
@@ -115,7 +123,7 @@
                 </div>
 
                 <div class="iframe-container">
-                    <!-- iframe here -->
+                    <!-- iframe -->
                     <iframe id="jobIframe" src="https://www.bing.com" width="450" height="950" style="border:0;">
                     None
                     </iframe>
