Added arrows for buttons

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -20,7 +20,7 @@
             <h1> <span class="red-highlight">Business</span> Page</h1>
             <p>Business in Tagapo: Permits and Job Opportunities</p>
 
-            <div class="contact-btn"><p>Contact Us</p></div>
+            <div class="contact-btn"><p>Contact Us →</p></div>
         </div>
 
         <!--Business Permit Steps Panel-->
@@ -55,7 +55,7 @@
             <span class="permit-note"><p><i>You can check the tables below for the prices of permits.</i></p></span>
 
             <div class="apply-btn">
-                <a href="#">Apply Now</a>
+                <a href="#">Apply Now →</a>
             </div>
         </div>
 
