Changed File Locations for iframe

--- a/Pages/strose.html
+++ b/Pages/strose.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>NYK TDG Philippines Inc.</title>
-    <link rel="stylesheet" href="/Stylesheets/JobDetails.css" />
+    <link rel="stylesheet" href="/Stylesheets/jobDetailsStyle.css" />
 </head>
 <body>
     <div class="pageStyle">
