--- a/Pages/nyk.html
+++ b/Pages/nyk.html
@@ -8,7 +8,7 @@
 <body>
     <div class="pageStyle">
         <div>
-            <img src="/Images/nyk-logo.png" alt="A">
+            <img src="/Images/nyk-logo.png" alt="Logo">
         </div> <br>
         <p>Km. 35 National Hi-way, Brgy. Canlalay, Binan City, Laguna (Beside Motor Central in front of Phoenix Gas Station)</p>
     </div>
