--- a/Pages/strose.html
+++ b/Pages/strose.html
@@ -8,7 +8,7 @@
 <body>
     <div class="pageStyle">
         <div>
-            <img src="/Images/strose-logo.png" alt="A">
+            <img src="/Images/strose-logo.png" alt="Logo">
         </div> <br>
         <p>Km 35 National Hi-Way, Brgy. Canlalay, Biñan City, Laguna</p>
         <p>saintrosetransit.hre@gmail.com</p>
