Updated Banner and Font Colors

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -17,8 +17,8 @@
         <!--Business Website Banner-->
         <div class="web-banner">
             <h1>Barangay Tagapo</h1>
-            <h1> <span class="red-highlight">Business</span> Page</h1>
-            <p>Business in Tagapo: Permits and Job Opportunities</p>
+            <h1> <span class="red-highlight">Livelihood</span> Page</h1>
+            <p>Livelihood in Tagapo: Business Permits and Job Opportunities</p>
 
             <div class="contact-btn"><p>Contact Us →</p></div>
         </div>
