--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -14,18 +14,18 @@
     </head>
 
     <body>
-        <!--Business Website Banner-->
+        <!--Website Banner-->
         <div class="web-banner">
             <h1>Barangay Tagapo</h1>
-            <h1> <span class="red-highlight">Business</span> Page</h1>
-            <p>Business in Tagapo: Permits and Job Opportunities</p>
+            <h1> <span class="red-highlight">Livelihood</span> Page</h1>
+            <p>Livelihood in Tagapo: Business Permits and Job Opportunities</p>
 
             <div class="contact-btn"><p>Contact Us →</p></div>
         </div>
 
         <!--Business Permit Steps Panel-->
         <div class="business-permit-steps">
-            <h2>Need a Business Permit?</h2>
+            <h2>Need a <span class="red-highlight">Business Permit</span>?</h2>
 
             <div class="steps-wrapper">
 
