Added dummy footer and headers

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -14,6 +14,10 @@
     </head>
 
     <body>
+        <header>
+            <!--Insert Header code here-->
+        <h1>THIS IS A DUMMY HEADER</h1>
+        </header>
         <!--Website Banner-->
         <div class="web-banner">
             <h1>Barangay Tagapo</h1>
@@ -271,5 +275,9 @@
                 });
             });
         </script>
+        <footer>
+        <h1>THIS IS A DUMMY FOOTER</h1>
+        <!--Insert Footer here-->
+        </footer>
     </body>
 </html>
