--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -196,9 +196,7 @@
         <!--Job Opportunities Panel-->
         <div class="jobs-section">
             <div class="job-title-row">
-                <h2>
-                    <span class="red">Job</span><span class="black"> Opportunities</span>
-                </h2>
+                <h2><span class="red-highlight">Job</span>Opportunities</h2>
                 <div class="job-title-underline"></div>
             </div>
             <div class="job-panel">
