--- a/Pages/antonina.html
+++ b/Pages/antonina.html
@@ -10,9 +10,11 @@
         <div>
             <img src="/Images/antonina-logo.jpg" alt="Logo">
         </div> <br>
-        <p>Baynosa Compound, Rizal Blvd., Brgy. Malusak, Santa Rosa, Laguna</p>
-        <p>antonina.hrasst@gmail.com</p>
-        <p>09175910382</p>
+        <div class="contact-info">
+            <div><img src="/Images/location-icon.png" class="icon" alt="Location icon">Baynosa Compound, Rizal Blvd., Brgy. Malusak, Santa Rosa, Laguna</div>
+            <div><img src="/Images/email-icon.png" class="icon" alt="Email icon">antonina.hrasst@gmail.com</div>
+            <div><img src="/Images/phone-icon.png" class="icon" alt="Phone icon">09175910382</div>
+        </div><br>
         <h2>Vacant Positions</h2>
         <ul>
             <li>Forklift Operator</li>
