--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -253,7 +253,7 @@
 
                 <div class="iframe-container">
                     <!-- iframe -->
-                    <iframe id="jobIframe" src="https://www.bing.com" width="450" height="950" style="border:0;">
+                    <iframe id="jobIframe" src="/Pages/SelectJob.html" width="450" height="950" style="border:0;">
                     None
                     </iframe>
                 </div>
