Fixed vertical lines and banner image

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -16,12 +16,13 @@
     <body>
         <header>
             <!--Insert Header code here-->
-        <h1>THIS IS A DUMMY HEADER</h1>
+            <h1>THIS IS A DUMMY HEADER</h1>
         </header>
+
         <!--Website Banner-->
         <div class="web-banner">
             <h1>Barangay Tagapo</h1>
-            <h1> <span class="red-highlight">Livelihood</span> Page</h1>
+            <h1><span class="red-highlight">Livelihood</span> Page</h1>
             <p>Livelihood in Tagapo: Business Permits and Job Opportunities</p>
 
             <div class="contact-btn"><p>Contact Us →</p></div>
@@ -40,10 +41,13 @@
                 </div>
 
                 <div class="steps">
+                    <div class="connector-line-top"></div>
                     <h3>Business Permit Application</h3>
 
                     <p><b>Walk-in:</b> Proceed to the information desk for assistance. You are required to fill up a form for the processing of your Business Permit.</p>
                     <p><b>Online:</b> Click the button below for online application.</p>
+                    <div class="connector-line-bottom"></div>
+
                 </div>
 
                 <div class="steps">
@@ -192,10 +196,11 @@
             </tr>
         </table>
         </div>
+
         <!--Job Opportunities Panel-->
         <div class="jobs-section">
             <div class="job-title-row">
-                <h2><span class="red-highlight">Job</span>Opportunities</h2>
+                <h2><span class="red-highlight">Job</span> Opportunities</h2>
                 <div class="job-title-underline"></div>
             </div>
             <div class="job-panel">
