--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -27,7 +27,9 @@
             <h1><span class="red-highlight">Livelihood</span> Page</h1>
             <p>Livelihood in Tagapo: Business Permits and Job Opportunities</p>
 
-            <div class="contact-btn"><p>Contact Us →</p></div>
+            <div class="contact-btn">
+                <a href="#">Contact Us →</a>
+            </div>
         </div>
 
         <!--Business Permit Steps Panel-->
@@ -73,130 +75,130 @@
             <br><br>
             <h1 style="text-align: center;">Barangay Clearance</h1>
             <table id="permitTable">
-            <tr>
-                <th colspan="2">For the issuance of Business Permit</td>
-            </tr>
-            <tr>
-                <td><strong>a.</strong> Accounting Services Firm</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>b.</strong> Barbershops / Beauty Shops / Salon and Spa</td>
-                <td>Php 300.00</td>
-            </tr>
-            <tr>
-                <td><strong>c.</strong> Branded Commercial Stores</td>
-                <td>Php 1000.00</td>
-            </tr>
-            <tr>
-                <td><strong>d.</strong> Carwash Shop</td>
-                <td>Php 300.00</td>
-            </tr>
-            <tr>
-                <td><strong>e.</strong> Catering / Event Services</td>
-                <td>Php 300.00</td>
-            </tr>
-            <tr>
-                <td><strong>f.</strong> Commercial Stores</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>g.</strong> Commercial Rental Spaces</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>h.</strong> Convinience Stores</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>i.</strong> Construction Firms and Hardware</td>
-                <td>Php 1000.00</td>
-            </tr>
-            <tr>
-                <td><strong>j.</strong> Dry and Wet Market Stalls</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>k.</strong> Engineering Firms and Services</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>l.</strong> Financial Firms and Pawnshops</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>m.</strong> Food Services and Catering</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>n.</strong> Gasoline Stations</td>
-                <td>Php 1000.00</td>
-            </tr>
-            <tr>
-                <td><strong>o.</strong> Healthcare and Medical Facilities</td>
-                <td>Php 1000.00</td>
-            </tr>
-            <tr>
-                <td><strong>p.</strong> Insurance Firms and Services</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>q.</strong> Internet Café Shops</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>r.</strong> Junk Shops</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>s.</strong> Learning Centers</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>t.</strong> LPG Trading</td>
-                <td>Php 1000.00</td>
-            </tr>
-            <tr>
-                <td><strong>u.</strong> Motor Parts and Services Shops</td>
-                <td>Php 1000.00</td>
-            </tr>
-            <tr>
-                <td><strong>v.</strong> Online Shops and Services</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>w.</strong> Photo Centers</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>x.</strong> Residential Rentals</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>y.</strong> Residential and Development</td>
-                <td>Php 1000.00</td>
-            </tr>
-            <tr>
-                <td><strong>z.</strong> Sari-Sari Store</td>
-                <td>Php 300.00</td>
-            </tr>
-            <tr>
-                <td><strong>aa.</strong> Transport and Vehicle Services</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>bb.</strong> Travel Agencies</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>cc.</strong> Water Refilling Stations</td>
-                <td>Php 500.00</td>
-            </tr>
-            <tr>
-                <td><strong>dd.</strong> Corporations / Factories / Manufacturing Firms / Other businesses not mentioned</td>
-                <td>Php 1000.00</td>
-            </tr>
-        </table>
+                <tr>
+                    <th colspan="2">For the issuance of Business Permit</td>
+                </tr>
+                <tr>
+                    <td><strong>a.</strong> Accounting Services Firm</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>b.</strong> Barbershops / Beauty Shops / Salon and Spa</td>
+                    <td>Php 300.00</td>
+                </tr>
+                <tr>
+                    <td><strong>c.</strong> Branded Commercial Stores</td>
+                    <td>Php 1000.00</td>
+                </tr>
+                <tr>
+                    <td><strong>d.</strong> Carwash Shop</td>
+                    <td>Php 300.00</td>
+                </tr>
+                <tr>
+                    <td><strong>e.</strong> Catering / Event Services</td>
+                    <td>Php 300.00</td>
+                </tr>
+                <tr>
+                    <td><strong>f.</strong> Commercial Stores</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>g.</strong> Commercial Rental Spaces</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>h.</strong> Convinience Stores</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>i.</strong> Construction Firms and Hardware</td>
+                    <td>Php 1000.00</td>
+                </tr>
+                <tr>
+                    <td><strong>j.</strong> Dry and Wet Market Stalls</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>k.</strong> Engineering Firms and Services</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>l.</strong> Financial Firms and Pawnshops</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>m.</strong> Food Services and Catering</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>n.</strong> Gasoline Stations</td>
+                    <td>Php 1000.00</td>
+                </tr>
+                <tr>
+                    <td><strong>o.</strong> Healthcare and Medical Facilities</td>
+                    <td>Php 1000.00</td>
+                </tr>
+                <tr>
+                    <td><strong>p.</strong> Insurance Firms and Services</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>q.</strong> Internet Café Shops</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>r.</strong> Junk Shops</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>s.</strong> Learning Centers</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>t.</strong> LPG Trading</td>
+                    <td>Php 1000.00</td>
+                </tr>
+                <tr>
+                    <td><strong>u.</strong> Motor Parts and Services Shops</td>
+                    <td>Php 1000.00</td>
+                </tr>
+                <tr>
+                    <td><strong>v.</strong> Online Shops and Services</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>w.</strong> Photo Centers</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>x.</strong> Residential Rentals</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>y.</strong> Residential and Development</td>
+                    <td>Php 1000.00</td>
+                </tr>
+                <tr>
+                    <td><strong>z.</strong> Sari-Sari Store</td>
+                    <td>Php 300.00</td>
+                </tr>
+                <tr>
+                    <td><strong>aa.</strong> Transport and Vehicle Services</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>bb.</strong> Travel Agencies</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>cc.</strong> Water Refilling Stations</td>
+                    <td>Php 500.00</td>
+                </tr>
+                <tr>
+                    <td><strong>dd.</strong> Corporations / Factories / Manufacturing Firms / Other businesses not mentioned</td>
+                    <td>Php 1000.00</td>
+                </tr>
+            </table>
         </div>
 
         <!--Job Opportunities Panel-->
@@ -205,9 +207,9 @@
                     <h2><span class="red-highlight">Job</span> Opportunities</h2>
                     <div class="job-title-underline"></div>
                 </div>
+
                 <div class="job-panel">
                     <div class="job-list">
-                            <!-- Job cards here -->
                             <!--Job Container 1-->
                             <div class="job-container">
                                 <div class="job-logo">
@@ -232,7 +234,7 @@
                                 
                                 <div class="job-texts">
                                     <h2>NYK TDG Philippines Inc.</h2>
-                                    <p>Location</p>
+                                    <p>Bacnotan Drive, Barangay Real, Calamba City, Laguna</p>
                                 </div>
 
                                 <div class="button">
@@ -255,12 +257,14 @@
                                     <button class="read-btn" data-url="/Pages/strose.html">Read More</button>
                                 </div>
                             </div>
+
                             <div class="pagination">
                                 <button class="page-button">1</button>
                                 <button class="page-button">2</button>
                                 <button class="page-button">3</button>
                                 <button class="page-button next">Next</button>
                             </div>
+
                         </div>
 
                         <div class="iframe-container">
@@ -268,12 +272,12 @@
                             None
                             </iframe>
                         </div>
-                </div>                    
+                </div>                  
         </div>
 
         <footer>
-        <h1>THIS IS A DUMMY FOOTER</h1>
-        <!--Insert Footer here-->
+            <h1>THIS IS A DUMMY FOOTER</h1>
+            <!--Insert Footer here-->
         </footer>
     </body>
 </html>
