--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Barangay Tagapo Business Page</title>
+        <title>Barangay Tagapo Livelihood Page</title>
         
         <link rel="stylesheet" href="/Stylesheets/livelihoodDashboardStyle.css" />
         <link rel="stylesheet" href="/Stylesheets/livelihoodWebsiteBannerStyle.css" />
