Functioning pagination buttons added

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -114,7 +114,11 @@
             <tr><td><strong>dd.</strong> Corporations / Factories / Manufacturing Firms / Other businesses not mentioned</td><td>Php 1000.00</td></tr>
             </tbody>
             </table>
-            <div id="pagination"></div>
+            <div class="pagination">
+                                <button class="page-button">1</button>
+                                <button class="page-button">2</button>
+                                <button class="page-button">3</button>
+            </div>
         </div>
 
         <!--Job Opportunities Panel-->
