Job Opportunites subtext

--- a/businessDashboard.html
+++ b/businessDashboard.html
@@ -125,9 +125,10 @@
         <div class="jobs-section fade-in">
                 <div class="job-title-row">
                     <h2><span class="red-highlight">Job</span> Opportunities</h2>
+                    <p class="job-subtitle">Looking for a job? Check out the available job opportunities in Barangay Tagapo.</p>
                     <div class="job-title-underline"></div>
                 </div>
-
+                
                 <div class="job-panel">
                     <div class="job-list">
                         <div class="job-page" data-page="1">
